--- a/public/frontend/css/login.css
+++ b/public/frontend/css/login.css
@@ -53,6 +53,7 @@ body {
 .form-wrapper {
   width: 100%;
   max-width: 28rem;
+  /* padding-top: 180px; */
 }
 
 .form {
@@ -64,7 +65,17 @@ body {
   transform: scale(0);
   transition: .5s ease-in-out;
   transition-delay: 1s;
+
 }
+.sign-up{
+    margin-top: 90px;
+}
+.sign-in{
+    margin-top: 100px;
+
+}
+
+
 
 .input-group {
   position: relative;
@@ -498,5 +509,7 @@ body {
       font-size: 2rem;
   }
 }
+
+
 
 
