--- a/public/backend/custome.css
+++ b/public/backend/custome.css
@@ -2,9 +2,17 @@
     padding: 4.25rem;
 }
 .ticket-img{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border: 1px solid blue;
 
+}
+
+.display-none{
+    display: none;
+}
+
+.time-style{
+    font-size: 14px;
 }
 
