--- a/public/frontend/css/custome.css
+++ b/public/frontend/css/custome.css
@@ -25,10 +25,14 @@
 }
 
 .ticket-page-login-btn {
-	color: rgb(220, 106, 57);
-	border: 2px solid #3c4ae6;
-	padding: 5px;
-	border-radius: 5px;
+    color: white;
+    border: 2px solid #3c4ae6;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #1F1F47;
+}
+.mt-3 a:hover {
+    color: white !important;
 }
 
 
