--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -778,12 +778,13 @@ body {
 
 /* service-item */
 .service-item{
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
   margin: 5%;
   padding: 5%;
   height: 100%;
   width: 100%;
   border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .service-item-text{
   margin-top: 15px;
@@ -1842,7 +1843,8 @@ body {
 .timeline .timeline-box {
   padding: auto;
   position: relative;
-  background-color: #efefef;
+  /* background-color: #efefef; */
+  background-color: #FFFFFF;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 2px 2px 5px 0px;
   height: 150px;
@@ -1866,7 +1868,8 @@ body {
 .timeline .timeline-box .timeline-box-arrow {
   width: 10px;
   height: 10px;
-  background-color: #efefef;
+  /* background-color: #efefef; */
+  background-color: #FFFFFF;
   position: absolute;
   left: 0;
   top: 50%;
@@ -1937,6 +1940,23 @@ p {
   /* text-align: center; */
   border-radius: 15px;
 }
+.dropdown-content button{
+    background-color: #f1f1f1;
+    color: black;
+    padding: 5px 20px;
+    text-decoration: none;
+    display: block;
+    font-weight: 900;
+    text-align: left;
+    min-width: 100px !important;
+
+
+}
+.dropdown-content button:hover {
+    color: white !important;
+    background-color: #1F1F47;
+    border-radius: 10px;
+  }
 
 .dropdown-content a {
   color: black;
@@ -2071,4 +2091,9 @@ p {
 .text-two{
     font-size: large;
     font-weight: 700;
+}
+
+.video{
+    height: 400px;
+    width: 800px;
 }
