--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -262,7 +262,7 @@ body {
 .uranus,
 .neptune,
 .pluto {
-    position: absolute;
+    position:absolute;
     border-style: solid;
     border-color: rgb(212, 103, 103) transparent transparent transparent;
     border-width: 0.1em 0.1em 0 0;
@@ -273,42 +273,57 @@ body {
     left: -15em;
     width: 70em;
     height: 70em;
-    animation: orbit 22s linear infinite;
+    animation: orbit 20s linear infinite;
+    /* animation-delay: 0s; */
+
+
 }
 .jupiter {
     top: -15em;
     left: -15em;
     width: 70em;
     height: 70em;
-    animation: orbit 28s linear infinite;
+    animation: orbit 25s linear infinite;
+    /* animation-delay: 0.5s; */
+
+
 }
 .saturn {
     top: -15em;
     left: -15em;
     width: 70em;
     height: 70em;
-    animation: orbit 18s linear infinite;
+    animation: orbit 30s linear infinite;
+    /* animation-delay: 1s; */
+
+
 }
 .uranus {
     top: -30em;
     left: -30em;
     width: 100em;
     height: 100em;
-    animation: orbit 20s linear infinite;
+    animation: orbit 22s linear infinite;
+    /* animation-delay: 0s; */
+
 }
 .neptune {
     top: -30em;
     left: -30em;
     width: 100em;
     height: 100em;
-    animation: orbit 30s linear infinite;
+    animation: orbit 27s linear infinite;
+    /* animation-delay: 0.5s; */
+
 }
 .pluto {
     top: -30em;
     left: -30em;
     width: 100em;
     height: 100em;
-    animation: orbit 24s linear infinite;
+    animation: orbit 32s linear infinite;
+    /* animation-delay: 1s; */
+
 }
 
 .earth::before,
@@ -321,7 +336,7 @@ body {
     position: absolute;
     border-radius: 50%;
     transform-origin: center center;
-    animation: orbit 24s linear infinite;
+    /* animation: orbit 24s linear infinite; */
 }
 .earth::before {
     top: 3em;
@@ -330,7 +345,8 @@ body {
     height: 20em;
     background-image: url('./images/softwaredev.png');
     background-size: cover;
-    transform: rotate(-25deg);
+    /* transform: rotate(-25deg); */
+    transform: rotate(45deg);
 }
 .jupiter::before {
   top: 3em;
@@ -339,6 +355,7 @@ body {
     height: 20em;
     background-image: url('./images/appdev.png');
     background-size: cover;
+    transform: rotate(-45deg);
 }
 .saturn::before {
   top: 3em;
