--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1369,7 +1369,8 @@ body {
   .input-group {
     position: relative;
     width: 100%;
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
+      margin: 8px 0;
   }
 
   .input-group i {
@@ -1432,7 +1433,7 @@ body {
 }
 
   .form p {
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
     font-size: .7rem;
   }
 
