--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -228,8 +228,9 @@ body {
   background-image: url('./images/banner5.jpg'); /* Add your background image path */
   background-size: cover;
   background-position: center center;
-  filter: blur(5px); /* Adjust the blur intensity as needed */
+  filter: blur(1px); /* Adjust the blur intensity as needed */
   z-index: -1; /* Place the blurry background behind the content */
+
 }
 
 .solar {
@@ -2138,4 +2139,30 @@ p {
 }
 
 
+
+.hero {
+    position: relative;
+}
+.astro-icon {
+    position: absolute;
+    top: 100px;
+    right: 5%;
+    z-index: 999;
+}
+.astro-icon img {
+    width: 100px;
+    height: auto;
+}
+
+
+/* .astro-icon {
+    position: fixed;
+    top: 200px;
+    right: 5%;
+    z-index: 999;
+}
+
+.astro-icon img {
+    width: 100px;
+} */
 
