--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -228,7 +228,7 @@ body {
   background-image: url('./images/banner5.jpg'); /* Add your background image path */
   background-size: cover;
   background-position: center center;
-  filter: blur(1px); /* Adjust the blur intensity as needed */
+  filter: blur(2px); /* Adjust the blur intensity as needed */
   z-index: -1; /* Place the blurry background behind the content */
 
 }
@@ -2143,14 +2143,27 @@ p {
 .hero {
     position: relative;
 }
+
+
+.faq-icon {
+    position: absolute;
+    top: 160px;
+    right: 13%;
+    z-index: 999;
+}
+.faq-icon img {
+    width: 60px;
+    height: auto;
+}
+
 .astro-icon {
     position: absolute;
-    top: 100px;
+    top: 200px;
     right: 5%;
     z-index: 999;
 }
 .astro-icon img {
-    width: 100px;
+    width: 150px;
     height: auto;
 }
 
