--- a/public/frontend/css/modal.css
+++ b/public/frontend/css/modal.css
@@ -148,3 +148,92 @@
         }
       }
 
+
+      /*cookie Modal styles */
+      .cookie-modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 0; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
+      }
+
+    /* Modal content */
+    .cookie-modal-card {
+        background-color: #fff;
+        margin-left: -400px; /* Start off-screen */
+        margin-top: 30%; /* 30% from the top */
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 400px;
+        width: 80%; /* Could be more or less, depending on screen size */
+        transition: margin-left 0.5s ease; /* Smooth transition */
+
+    }
+
+    /* Close button */
+    .cookie-modal-close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .cookie-modal-close:hover,
+    .cookie-modal-close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    /* Container styles */
+    .cookie-modal-container {
+        max-width: 600px;
+        margin: auto;
+        padding: 20px;
+    }
+
+    /* Button styles */
+    .cookie-modal-btn {
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .cookie-modal-btn:hover {
+        background-color: #0056b3;
+    }
+
+    /* Show the modal when the 'show' class is added */
+    .cookie-modal.show {
+        display: block;
+    }
+
+    /* Slide-in animation */
+    .cookie-modal.show .cookie-modal-card {
+        margin-left: 5px; /* Slide in from the left */
+    }
+
+    @media screen and (max-width: 1000px) {
+      .cookie-modal-card {
+        margin-top: 40%;
+        width: 50% !important;
+      }
+
+    }
+    @media screen and (max-width: 300px) {
+        .cookie-modal-card {
+          margin-top: 40%;
+          width: 50% !important;
+        }
+
+      }
+
