--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -117,10 +117,13 @@ body {
   box-shadow: white !important;
 }
 /*** Navbar ***/
-/* .navbar.sticky-top {
-    top: -100px;
-    transition: .5s;
-} */
+.sticky-top {
+    /* top: -100px; */
+    /* transition: .5s; */
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
 
 .navbar .navbar-brand img {
     max-height: 60px;
@@ -2136,6 +2139,3 @@ p {
     margin-bottom: 3px;
 
 }
-
-
-
