--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -576,6 +576,8 @@ body {
 }
 
 .custom-btn-review {
+  height: 50px;
+  width: 100px;
   background: none;
   border: none;
   text-align: center;
@@ -697,7 +699,7 @@ body {
   .flip-box-front, .flip-box-back {
     position: absolute;
     width: 100%;
-    height: 350px;
+    height: 322px;
     border-radius: 30px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -800,7 +802,7 @@ body {
 /* service-item */
 .service-item{
   /* background-color: #f5f5f5; */
-  margin: 5%;
+  /* margin: 5%; */
   padding: 5%;
   height: 100%;
   width: 100%;
@@ -808,7 +810,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .service-item-text{
-  margin-top: 15px;
+  margin-top: -16px;
   text-align: center;
   color: black !important;
   font-weight:900;
@@ -1071,6 +1073,7 @@ body {
 /*** Footer ***/
 .footer {
     color: #7F8499;
+
 }
 
 .footer .btn.btn-link {
@@ -1322,6 +1325,7 @@ body {
     overflow: hidden;
     z-index: 0;
   }
+
   .container-co{
     max-width:100%;
   }
@@ -1375,6 +1379,7 @@ body {
     width: 100%;
     /* margin: 1rem 0; */
       margin: 8px 0;
+
   }
 
   .input-group i {
@@ -2150,7 +2155,7 @@ p {
     position: absolute;
     top: 160px;
     right: 13%;
-    z-index: 999;
+    /* z-index: 999; */
 }
 .faq-icon img {
     width: 60px;
@@ -2161,7 +2166,7 @@ p {
     position: absolute;
     top: 200px;
     right: 5%;
-    z-index: 999;
+    /* z-index: 999; */
 }
 .astro-icon img {
     width: 150px;
