--- a/public/frontend/css/modal.css
+++ b/public/frontend/css/modal.css
@@ -12,7 +12,7 @@
     } */
 
     /* Set a style for all buttons */
-    button {
+    .modal-button {
       background-color: #2B48DA;
       color: white;
       padding: 14px 20px;
@@ -22,7 +22,7 @@
       width: 100%;
     }
 
-    button:hover {
+    .modal-button:hover {
       opacity: 0.8;
     }
 
