--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -749,7 +749,7 @@ body {
   .flip-btn{
     padding-left: 5px;
     border-radius: 5px;
-    background-color: #1F1F47;
+    background-color: #ffffff;
     /* box-shadow: rgba(0, 0, 0, 0.35) 3px 3px 5px 2px; */
     /* border: teal; */
     font-weight: 900;
@@ -1439,6 +1439,7 @@ body {
     color: black !important;
     font-weight: 900;
     background-color: #f5f5f5 !important;
+    padding: 10px !important;
 }
 
   .form p {
@@ -1949,7 +1950,7 @@ p {
   padding: 16px;
   font-size: 16px; */
   border: none;
-  /* background-color: rgb(182, 177, 231); */
+  background-color:transparent;
 }
 
 /* .dropdown {
