--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -146,7 +146,8 @@ body {
 .navbar .navbar-nav .nav-link:hover {
     color: white !important;
     background-color: #010A35;
-    border-radius: 10%;
+    /* background-color:#f1f1f1!important; */
+    border-radius: 10px;
 }
 
 .navbar .navbar-nav .nav-link.active {
@@ -514,6 +515,9 @@ body {
     border-radius: 1rem;
     cursor: pointer;
 }
+.custom-btn:hover{
+    color: white !important;
+}
 
 .custom-blob {
     position: absolute;
@@ -705,6 +709,21 @@ body {
     margin-left: 5px;
     margin-right: 5px;
     margin-top: auto;
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 10px;
 }
 
 /* .card-img-top:hover {
@@ -2046,7 +2065,7 @@ p {
     border-radius: 15px;
 }
 
-.dropdown-content button {
+.dropdown-content button{
     /* background-color: #f1f1f1;
     color: black; */
     padding: 5px 20px;
@@ -2148,13 +2167,17 @@ p {
     z-index: 100;
 }
 
+.whatsapp-icon-bi:hover{
+    color: white !important;
+}
 .whatsapp-icon-bi {
     font-size: 35px;
 }
 
-a:hover {
-    color: #0a0330 !important;
-}
+
+/* a:hover {
+    color:transparent !important;
+} */
 
 /* for mobile */
 @media screen and (max-width: 767px) {
