--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -29,8 +29,9 @@ body {
     display: none;
     right: 30px;
     bottom: 60px;
-    z-index: 99;
+    z-index:0;
     background-color: #001064;
+    border: none;
 }
 
 
@@ -1490,7 +1491,7 @@ body {
 }
 
 .input-group textarea {
-    /* width: 100% !important; */
+    width: 100% !important;
     padding: 1rem 3rem;
     font-size: 1rem;
     background-color: var(--gray);
@@ -2168,9 +2169,12 @@ ul.dropdown-content {list-style-type: none;}
     text-align: center;
     font-size: 22px;
     box-shadow: 2px 2px 3px #999;
-    z-index: 100;
+    z-index: 0;
+    padding-top: 1px !important;
 }
-
+.whatsapp_float:hover{
+    color: white !important;
+}
 .whatsapp-icon-bi:hover{
     color: white !important;
 }
@@ -2193,9 +2197,10 @@ ul.dropdown-content {list-style-type: none;}
     .whatsapp_float {
         width: 45px;
         height: 45px;
-        bottom: 110px;
+        bottom: 115px;
         right: 34px;
         font-size: 22px;
+        padding-top: 1px !important;
     }
 }
 
@@ -2427,7 +2432,9 @@ ul.dropdown-content {list-style-type: none;}
         /* border: 1px solid rgb(139, 171, 196); */
         padding: 20px;
         margin-bottom: 20px;
-        background-color: rgb(238, 238, 238);
+        /* background-color: rgb(238, 238, 238); */
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.35) 2px 2px 5px 2px;
     }
 
     .timeline .timeline-box {
