--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -707,8 +707,8 @@ body {
     width: 80% !important;
     /* border-radius: 50%; */
     margin: auto;
-    margin-left: 5px;
-    margin-right: 5px;
+    /* margin-left: 5px;
+    margin-right: 5px; */
     margin-top: auto;
 }
 .card {
