--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -146,8 +146,8 @@ body {
 
 .navbar .navbar-nav .nav-link:hover {
     color: white !important;
-    background-color: #010A35;
-    /* background-color:#f1f1f1!important; */
+    /* background-color: #010A35; */
+    background-color:rgb(161 155 215) !important;
     border-radius: 10px;
 }
 
@@ -443,6 +443,44 @@ body {
     animation: testUp 1s;
 }
 
+
+@media only screen and (max-width: 1050px) {
+    .hero {
+        position: relative;
+        height: 600px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        /* Ensure that the pseudo-element doesn't overflow */
+    }
+    .solar {
+        font-size: 3.5px;
+    }
+    .faq-icon {
+        position: absolute;
+        top: 15px !important;
+        right: 17% !important;
+    }
+
+    .faq-icon img {
+        width: 50px !important;
+        height: auto;
+    }
+
+    .astro-icon {
+        position: absolute;
+        top: 40px !important;
+        right: 5% !important;
+    }
+
+    .astro-icon img {
+        width: 60px !important;
+        height: auto;
+    }
+}
+
+
 /* Choosing us */
 /* .Choosing-body{
     background-color: #7A8499;
@@ -704,12 +742,10 @@ body {
 
 .card-img-top {
     height: 100px;
-    width: 80% !important;
+    width: 70% !important;
     /* border-radius: 50%; */
     margin: auto;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: auto;
+    padding: 10px;
 }
 .card {
     position: relative;
@@ -1154,7 +1190,7 @@ body {
 /*** Footer ***/
 .footer {
     color: #7F8499;
-
+    background-color: #f1f1f1f1;
 }
 
 .footer .btn.btn-link {
@@ -1974,11 +2010,11 @@ body {
 }
 
 
-/* .rounded-4 {
-  border-radius: 0.5rem;
+.rounded-4 {
+  padding: 2rem !important;
 }
 
-.rounded-4 {
+/* .rounded-4 {
   border-radius: var(--bs-border-radius-xl)!important;
 }
 .p-3 {
@@ -2058,7 +2094,7 @@ p {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color:rgb(182, 177, 231) !important;
     min-width: 281px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -2086,7 +2122,7 @@ ul.dropdown-content {list-style-type: none;}
 
 .dropdown-content button:hover {
     color: white !important;
-    background-color: #1f1f47;
+    background-color:rgb(161 155 215);
     border-radius: 10px;
 }
 
@@ -2101,7 +2137,7 @@ ul.dropdown-content {list-style-type: none;}
 
 .dropdown-content a:hover {
     color: white !important;
-    background-color: #1F1F47;
+    background-color: rgb(161 155 215);
     border-radius: 10px;
 }
 
@@ -2197,10 +2233,13 @@ ul.dropdown-content {list-style-type: none;}
     .whatsapp_float {
         width: 45px;
         height: 45px;
-        bottom: 115px;
+        bottom: 80px;
         right: 34px;
         font-size: 22px;
         padding-top: 1px !important;
+    }
+    .back-to-top{
+        bottom: 25px !important;
     }
 }
 
@@ -2299,7 +2338,7 @@ ul.dropdown-content {list-style-type: none;}
 }
 
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
 
     .hero {
         position: relative;
@@ -2327,7 +2366,7 @@ ul.dropdown-content {list-style-type: none;}
         width: 150px;
         height: auto;
     }
-}
+} */
 
 
 
@@ -2445,6 +2484,9 @@ ul.dropdown-content {list-style-type: none;}
         box-shadow: rgba(255, 255, 255, 0.35) 2px 2px 5px 0px;
         height: 150px;
     }
+    .rounded-4 {
+        padding: 1rem !important;
+      }
 
     .timeline .timeline-circle {
         width: 64px;
@@ -2457,10 +2499,24 @@ ul.dropdown-content {list-style-type: none;}
         font-size: 30px;
         color: white;
     }
+}
 
-
-
-
-
-
+.choosing-font{
+    font-size: xx-large;
+}
+.twitter{
+    color:white !important;
+    background-color: black;
+}
+.facebook{
+    color:white !important;
+    background-color: #0866FF;
+}
+.instagram{
+    color:white !important;
+    background-color: #B53B87;
+}
+.linkedin{
+    color:white !important;
+    background-color:#0678B6 ;
 }
