--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -215,7 +215,7 @@ body {
 }
 
 .py-7 {
-    padding-top: 20px !important;
+    padding: 10px !important;
 
 }
 
@@ -224,7 +224,7 @@ body {
 }
 
 .display-6 {
-    padding-bottom: 15px;
+    /* padding-bottom: 15px; */
     font-size: 30px;
     /* text-shadow: 0px 5px 5px #3f6ce9; */
 }
@@ -734,21 +734,23 @@ body {
     height: 300px !important;
     width: 300px !important;
 }
-
-.owl-carousel-row {
+.client-bg{
+    background-color:#f1f1f1;
+}
+/* .owl-carousel-row {
     padding: 10px;
     margin-top: 20px;
-}
+} */
 
 .card-img-top {
     height: 100px;
     width: 70% !important;
     /* border-radius: 50%; */
-    /* margin: auto; */
+    margin: auto;
     padding: 10px;
     /* margin-left: 5px;
     margin-right: 5px; */
-    margin-top: auto;
+    /* margin-top: auto; */
 }
 .card {
     position: relative;
@@ -918,6 +920,9 @@ body {
 
 
 /* service-item */
+.service-bottom{
+    margin-bottom: 50px;
+}
 .service-item {
     /* background-color: #f5f5f5; */
     /* margin: 5%; */
@@ -1194,6 +1199,7 @@ body {
 .footer {
     color: #7F8499;
     background-color: #f1f1f1f1;
+    padding-top: 50px;
 }
 
 .footer .btn.btn-link {
@@ -2183,7 +2189,7 @@ ul.dropdown-content {list-style-type: none;}
     position: relative;
     top: 0;
     left: 100%;
-    width: 100%;
+    width: 91%;
     animation: slideIn 0.9s ease forwards;
 
 }
@@ -2473,8 +2479,8 @@ ul.dropdown-content {list-style-type: none;}
     .timeline-item {
         /* border: 1px solid rgb(139, 171, 196); */
         padding: 20px;
-        margin-bottom: 20px;
-        /* background-color: rgb(238, 238, 238); */
+        margin-bottom: 45px;
+        background-color: rgb(238, 238, 238);
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.35) 2px 2px 5px 2px;
     }
@@ -2502,6 +2508,9 @@ ul.dropdown-content {list-style-type: none;}
         font-size: 30px;
         color: white;
     }
+    /* .service-bottom-mob{
+        margin-bottom: 50px;
+    } */
 }
 
 .choosing-font{
