--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1839,6 +1839,19 @@ body {
         margin: .5rem;
         font-size: 2rem;
     }
+    .text-head {
+        font-size: x-large;
+        font-weight: 900;
+    }
+    .from-head {
+        font-size: x-large !important;
+        font-weight: 900;
+    }
+
+    .display-6 {
+        font-size: 22px;
+    }
+
 }
 
 
